controler/build/log/idf_py_stderr_output_20171
/home/bbernaciak/BB/crossTable/controler/main/main.c:47:8: error: unknown type name 'string'
   47 | static string TAG = "Main";
      |        ^~~~~~
/home/bbernaciak/BB/crossTable/controler/main/main.c:47:21: warning: initialization of 'int' from 'char *' makes integer from pointer without a cast [-Wint-conversion]
   47 | static string TAG = "Main";
      |                     ^~~~~~
/home/bbernaciak/BB/crossTable/controler/main/main.c: In function 'app_main':
/home/bbernaciak/BB/crossTable/controler/main/main.c:51:5: error: called object is not a function or function pointer
   51 |     ESP_LOG_INFO(TAG, "Starting controler");
      |     ^~~~~~~~~~~~
make[2]: *** [esp-idf/main/CMakeFiles/__idf_main.dir/build.make:76: esp-idf/main/CMakeFiles/__idf_main.dir/main.c.obj] Error 1
make[1]: *** [CMakeFiles/Makefile2:5578: esp-idf/main/CMakeFiles/__idf_main.dir/all] Error 2
make: *** [Makefile:136: all] Error 2
